# blaze-poc

./: .gitignore  Cargo.toml  README.md  architecture.drawio  overview.drawio
cli/: Cargo.toml
cli/src/: genesis.rs  genesis_commands.rs  keytool_commands.rs  lib.rs  main.rs  main_commands.rs
config/: Cargo.toml
config/src/: genesis.rs  lib.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/consensus/: mod.rs
core/src/consensus/tests/: consensus_tests.rs
core/src/executor/: batch_loader.rs  core.rs  executor_core.rs  mod.rs
core/src/master/: aggregators.rs  certificate_waiter.rs  garbage_collector.rs  header_waiter.rs  master_core.rs  master_helper.rs  master_synchronizer.rs  mod.rs  payload_receiver.rs  proposer.rs  state.rs
core/src/primary/: aggregators.rs  certificate_waiter.rs  core.rs  garbage_collector.rs  header_waiter.rs  helper.rs  mod.rs  payload_receiver.rs  primary_core.rs  primary_helper.rs  primary_synchronizer.rs  proposer.rs  synchronizer.rs
core/src/primary/tests/: common.rs  core_tests.rs  proposer_tests.rs
core/src/worker/: batch_maker.rs  helper.rs  mod.rs  primary_connector.rs  processor.rs  quorum_waiter.rs  synchronizer.rs  worker_helper.rs  worker_synchronizer.rs
core/src/worker/tests/: batch_maker_tests.rs  common.rs  helper_tests.rs  processor_tests.rs  quorum_waiter_tests.rs  synchronizer_tests.rs  worker_tests.rs
ledger/: Cargo.toml
ledger/src/: lib.rs
logger/: Cargo.toml
logger/src/: lib.rs
model/: Cargo.toml
model/src/: account.rs  atomic_u64.rs  base_types.rs  certificate.rs  committee.rs  config.rs  hash.rs  keypair.rs  lib.rs  pubkey.rs  sanitize.rs  signature.rs  transaction.rs  view.rs  vote.rs
network/: Cargo.toml
network/src/: lib.rs  receiver.rs  reliable_sender.rs  simple_sender.rs
testing/: .gitignore  committee.json  committee_single.json  id1.json  id2.json  id3.json  id4.json
validator/: Cargo.toml
validator/src/: lib.rs  main.rs  validator.rs
