[workspace]
members = [
    "cli",
    "config",
    "core",
    "logger",
    "ledger",
    "model",
    "network",
    "validator"
]
resolver = "2"

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
anemo = { git = "https://github.com/mystenlabs/anemo.git", rev = "7ebdcf82b5cccce71e9483d5b028329475a41a20" }
anemo-build = { git = "https://github.com/mystenlabs/anemo.git", rev = "7ebdcf82b5cccce71e9483d5b028329475a41a20" }
anemo-tower = { git = "https://github.com/mystenlabs/anemo.git", rev = "7ebdcf82b5cccce71e9483d5b028329475a41a20" }
multiaddr = "0.17.0"
tokio = "1.22.0"
serde = "1.0"
