[package]
authors = ["Mundis Maintainers <maintainers@mundis.io>"]
name = "mundis-cli"
edition = "2021"
version.workspace = true

[dependencies]
anyhow = { version = "1.0.64", features = ["backtrace"] }
clap = { version = "3.2.23", features = ["derive"] }
colored = "2.0.0"
rpassword = "7.0"
log = "0.4.14"
tiny-bip39 = "0.8.2"
tokio = { workspace = true, features = ["full"] }

mundis-logger = { path="../logger" }
mundis-model = { path="../model" }
mundis-core = { path="../core" }