[package]
name = "mundis-core"
version.workspace = true
edition = "2021"

[dependencies]
async-recursion = "0.3.2"
async-trait = "0.1.60"
anyhow = { version = "1.0.64", features = ["backtrace"] }
bincode = "1.3.3"
bytes = "1.0.1"
futures = "0.3.24"
log = "0.4.14"
itertools = "0.10.5"
multiaddr.workspace = true
rand = "0.7.3"
serde = { workspace = true, features = ["derive"] }
tap = "1.0.1"
tokio = { workspace = true, features = ["full"] }
tokio-util = { version = "0.6.2", features= ["codec"] }
tower = "0.4.13"

mundis-config = { path = "../config" }
mundis-model = { path = "../model" }
mundis-ledger = { path = "../ledger" }
mundis-logger = { path = "../logger" }
mundis-network = { path = "../network" }
