[package]
name = "mundis-model"
version.workspace = true
edition = "2021"

[dependencies]
anyhow = { version = "1.0.64", features = ["backtrace"] }
bs58 = "0.4.0"
bincode = "1.3.3"
digest = { version = "0.10.1" }
ed25519-dalek = { version = "1.0.1", features = ["batch"] }
generic-array = { version = "0.14.5", default-features = false, features = ["serde", "more_lengths"] }
hmac = "0.12.1"
itertools =  "0.10.3"
multiaddr.workspace = true
pbkdf2 = { version = "0.11.0", default-features = false }
rand = "0.7.3"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = { version = "1.0.88" }
serde_bytes = "0.11"
sha2 = "0.10.0"
thiserror = "1.0"

[dev-dependencies]
tiny-bip39 = "0.8.2"
